<resources>
    <string name="app_name">KarMa</string>
    <string name="app_norm_name">Karma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="profile">Ваши заявки</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="create">Создать</string>
    <string name="call">Позвонить</string>
    <string name="name_service">Название услуги</string>
    <string name="cost">Цена услуги</string>
    <string name="desc">Описание услуги</string>
    <string name="desc_op">Описание</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Недопустимое значение</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="login_failed">"Login failed"</string>

    <string name="opt_edit">Изменить</string>
    <string name="edit_service">Радактирование</string>
    <string name="unit_hint">Оплата за</string>
    <string name="opt_delete">Удалить</string>
    <string name="save">Запомнить</string>
    <string name="register">Регистрация</string>
    <string name="regist_done" translatable="false">Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="family">Фамилия</string>
    <string name="number">Номер телефона</string>
    <string name="enter">Войти</string>
    <string name="sign_in">Вход</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="add_service">Добавить заявку</string>
    <string name="new_service">Новая услуга</string>
    <string name="all_service">Все услуги</string>
    <string name="services">Услуги</string>
    <string name="my_services">Мои услуги</string>
    <string name="service">Услуга</string>
    <string name="image_card">Добавить заявку</string>

    <string name="profile_item">Профиль</string>
    <string name="profile_desc">Краткая информация о продавце</string>

    <string name="search">Поиск</string>
    <string name="empty">По вашему запросу ничего не найдено</string>
    <string name="not_equals">Пароли не сопадают</string>
    <string name="wrong_number_size">Номер должен состоять из 11 цифр</string>
    <string name="wrong_number">Неверный номер телефона</string>
    <string name="wrong_email">Неверный адрес электронной почты</string>
    <string name="wrong_name">Введите имя</string>
    <string name="wrong_family">Введите фамилию</string>
    <string name="news">Новости</string>
    <string name="donats">Пожертвования</string>
    <string name="faq">О создателях</string>
    <string name="info">О создателях</string>
    <string name="scoresTyt">Здесь будут баллы челика</string>
    <string name="scores">Карма: </string>
</resources>