<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/profileFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.castprogramms.karma.ui.progfile.ProfileFragment"
        android:label="@string/my_services"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_addServiceFragment"
            app:destination="@id/addServiceFragment"
            app:enterAnim="@anim/left_out"
            app:exitAnim="@anim/right_out"
            app:popEnterAnim="@anim/left_in"
            app:popExitAnim="@anim/right_in" />
    </fragment>

    <fragment
        android:id="@+id/allServicesFragment"
        android:name="com.castprogramms.karma.ui.allServices.AllServicesFragment"
        android:label="@string/services"
        tools:layout="@layout/fragment_all_services">
        <action
            app:enterAnim="@anim/left_out"
            app:exitAnim="@anim/right_out"
            app:popEnterAnim="@anim/left_in"
            app:popExitAnim="@anim/right_in"
            android:id="@+id/action_allServicesFragment_to_serviceFragment"
            app:destination="@id/serviceFragment" />
    </fragment>
    <fragment
        android:id="@+id/addServiceFragment"
        android:name="com.castprogramms.karma.ui.addServices.AddServiceFragment"
        android:label="@string/new_service">
        <action
            app:enterAnim="@anim/left_out"
            app:exitAnim="@anim/right_out"
            app:popEnterAnim="@anim/left_in"
            app:popExitAnim="@anim/right_in"
            android:id="@+id/action_addServiceFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/serviceFragment"
        android:name="com.castprogramms.karma.ui.service.ServiceFragment"
        android:label="@string/service" >
        <action
            android:id="@+id/action_serviceFragment_to_editServiceFragment"
            app:destination="@id/editServiceFragment" />
    </fragment>
    <fragment
        android:id="@+id/editServiceFragment"
        android:name="com.castprogramms.karma.EditServiceFragment"
        android:label="edit_service_fragment"
        tools:layout="@layout/edit_service_fragment" />
</navigation>