<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:textSize="22sp"
            android:theme="@style/TextStyle"
            android:id="@+id/text_register" />

        <EditText
            android:inputType="text"
            android:textColor="@color/tx_grey"
            android:background="@drawable/grey_round"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/black_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_register" />

        <EditText
            android:inputType="text"
            android:textColor="@color/tx_grey"
            android:background="@drawable/grey_round"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/family"
            android:id="@+id/family"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/black_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:inputType="phone"
            android:textColor="@color/tx_grey"
            android:background="@drawable/grey_round"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/number"
            android:hint="@string/number"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/black_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/family" />

        <EditText
            android:inputType="textEmailAddress"
            android:textColor="@color/tx_grey"
            android:background="@drawable/grey_round"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/email"
            android:hint="@string/prompt_email"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/black_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number" />


        <EditText
            android:inputType="textPassword"
            android:textColor="@color/tx_grey"
            android:background="@drawable/grey_round"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/prompt_password"
            android:id="@+id/password"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/black_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:inputType="textPassword"
            android:textColor="@color/tx_grey"
            android:background="@drawable/grey_round"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/password_repeat"
            android:hint="@string/password_repeat"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/black_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <com.google.android.material.button.MaterialButton
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.1"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/password_repeat"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/registration"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>